# trading_journey

./: .env.backup  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  NETLIFY_READY.md  Procfile  QUICK_SETUP.md  README.md  RENDER_DEPLOYMENT.md  api.js  build.sh  deployment-ready.html  env.production.example  env_example.txt  env_local.txt  env_render.txt  env_supabase.txt  export_static.py  netlify.toml  package.json  pyproject.toml  requirements-local.txt  requirements-netlify.txt  requirements.txt  supabase_setup_guide.md  test.html
journal/: admin.py  forms.py  models.py  supabase_auth.py  supabase_client.py  supabase_views.py  urls.py  views.py
journal/migrations/: 0001_initial.py  0002_userprofile_otpverification.py  0003_remove_userprofile_user_delete_otpverification_and_more.py  0004_tradinghabit_tradinggoal_tradingpsychology_and_more.py  0005_add_supabase_urls.py  0006_alter_trade_setup_type.py  0007_trade_capital_invested_trade_entry_premium_and_more.py  0008_remove_trade_capital_invested_and_more.py  0009_remove_trade_entry_premium_remove_trade_exit_premium_and_more.py  0010_remove_trade_trade_status_and_more.py  0011_trade_entry_time_trade_exit_time_and_more.py
js/: app.js  auth.js  dashboard.js  supabase-config.js
netlify/functions/: trades.js
netlify_static/: analytics.html  index.html  monthly_summary.html  tax_report.html  trade_list.html
static/css/: custom.css
static/js/: custom.js  custom.min.js  (+1 more)
templates/: base.html
trading_journal/: asgi.py  settings.py  urls.py  wsgi.py
(+29 files in other folders)
