[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-journal"
version = "1.0.0"
description = "Trading Journal Django Application"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Django==4.2.7",
    "psycopg2-binary==2.9.6",
    "python-decouple==3.8",
    "Pillow==9.5.0",
    "django-crispy-forms==2.0",
    "crispy-tailwind==0.5.0",
    "whitenoise==6.5.0",
    "reportlab==4.0.4",
    "openpyxl==3.1.2",
    "gunicorn==20.1.0",
    "dj-database-url==2.1.0",
    "django-environ==0.11.2"
]
